# spec

./: .gitignore  .merlin  bsconfig.json  package-lock.json  package.json  wasm.opam
binary/: decode.bs.js  decode.mjs  encode.bs.js  encode.mjs  encode.ml  utf8.bs.js  utf8.mjs
exec/: eval.bs.js  eval.mjs  eval_num.bs.js  eval_num.mjs  eval_vec.bs.js  eval_vec.mjs  eval_vec.ml  f32.bs.js  f32.mjs  f32_convert.bs.js  f32_convert.mjs  f64.bs.js  f64.mjs  f64_convert.bs.js  f64_convert.mjs  fxx.bs.js  fxx.mjs  fxx.ml  i16.bs.js  i16.mjs  i32.bs.js  i32.mjs  i32_convert.bs.js  i32_convert.mjs  i64.bs.js  i64.mjs  i64_convert.bs.js  i64_convert.mjs  i8.bs.js  i8.mjs  ixx.bs.js  v128.bs.js  v128.mjs  v128.ml
interpreter/: dune  wasm.opam
lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  build.ninja  install.ninja
lib/bs/binary/: decode.ast  decode.cmi  decode.cmj  decode.cmt  decode.cmti  decode.d  decode.iast  encode.ast  encode.cmi  encode.cmj  encode.cmt  (+10 more)
main/: main.ml
runtime/: func.bs.js  global.bs.js  global.mjs  instance.bs.js  instance.mjs  memory.bs.js  memory.ml  table.bs.js  table.mjs
script/: import.bs.js  import.mjs  script.bs.js  script.mjs
syntax/: ast.bs.js  ast.mjs  ast.ml  free.bs.js  free.mjs  operators.bs.js  operators.mjs  types.bs.js  types.mjs  values.bs.js  values.mjs
text/: arrange.bs.js  arrange.mjs  arrange.ml  lexer.ml  parse.bs.js  parse.mjs  parser.bs.js  parser.mjs  parser.ml  print.bs.js  print.mjs
util/: error.bs.js  error.mjs  lib.bs.js  lib.ml  lib.mli  sexpr.bs.js  source.bs.js
valid/: valid.bs.js  valid.mjs
(+228 files in other folders)
