opam-version: "2.0"
maintainer: "Andreas Rossberg <rossberg@mpi-sws.org>"
authors: "Andreas Rossberg <rossberg@mpi-sws.org>"
homepage: "https://github.com/WebAssembly/spec"
bug-reports: "https://github.com/WebAssembly/spec/issues"
license: "Apache-2.0"
dev-repo: "git+https://github.com/WebAssembly/spec.git"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "ocamlbuild" {build}
]
synopsis:
  "Library to read and write WebAssembly (Wasm) files and manipulate their AST"

