opam-version: "2.0"
maintainer: "Andreas Rossberg <rossberg@mpi-sws.org>"
authors: "Andreas Rossberg <rossberg@mpi-sws.org>"
homepage: "https://github.com/WebAssembly/spec"
bug-reports: "https://github.com/WebAssembly/spec/issues"
license: "Apache-2.0"
dev-repo: "git+https://github.com/WebAssembly/spec.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "dune"
]
synopsis:
  "Library to read and write WebAssembly (Wasm) files and manipulate their AST"

